@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,9 +18,9 @@ package org.springframework.boot.actuate.autoconfigure.metrics;
 
 import java.util.Arrays;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import io.micrometer.core.instrument.Meter;
 import io.micrometer.core.instrument.Meter.Id;
@@ -61,9 +61,12 @@ public class PropertiesMeterFilter implements MeterFilter {
 			return new MeterFilter() {
 			};
 		}
-		Tags commonTags = Tags.of(tags.entrySet().stream().map((entry) -> Tag.of(entry.getKey(), entry.getValue()))
-				.collect(Collectors.toList()));
+		Tags commonTags = Tags.of(tags.entrySet().stream().map(PropertiesMeterFilter::asTag).toList());
 		return MeterFilter.commonTags(commonTags);
+	}
+
+	private static Tag asTag(Entry<String, String> entry) {
+		return Tag.of(entry.getKey(), entry.getValue());
 	}
 
 	@Override
@@ -81,26 +84,33 @@ public class PropertiesMeterFilter implements MeterFilter {
 	public DistributionStatisticConfig configure(Meter.Id id, DistributionStatisticConfig config) {
 		Distribution distribution = this.properties.getDistribution();
 		return DistributionStatisticConfig.builder()
-				.percentilesHistogram(lookupWithFallbackToAll(distribution.getPercentilesHistogram(), id, null))
-				.percentiles(lookupWithFallbackToAll(distribution.getPercentiles(), id, null))
-				.sla(convertSla(id.getType(), lookup(distribution.getSla(), id, null)))
-				.minimumExpectedValue(
-						convertMeterValue(id.getType(), lookup(distribution.getMinimumExpectedValue(), id, null)))
-				.maximumExpectedValue(
-						convertMeterValue(id.getType(), lookup(distribution.getMaximumExpectedValue(), id, null)))
-				.build().merge(config);
+			.percentilesHistogram(lookupWithFallbackToAll(distribution.getPercentilesHistogram(), id, null))
+			.percentiles(lookupWithFallbackToAll(distribution.getPercentiles(), id, null))
+			.serviceLevelObjectives(
+					convertServiceLevelObjectives(id.getType(), lookup(distribution.getSlo(), id, null)))
+			.minimumExpectedValue(
+					convertMeterValue(id.getType(), lookup(distribution.getMinimumExpectedValue(), id, null)))
+			.maximumExpectedValue(
+					convertMeterValue(id.getType(), lookup(distribution.getMaximumExpectedValue(), id, null)))
+			.expiry(lookupWithFallbackToAll(distribution.getExpiry(), id, null))
+			.bufferLength(lookupWithFallbackToAll(distribution.getBufferLength(), id, null))
+			.build()
+			.merge(config);
 	}
 
-	private long[] convertSla(Meter.Type meterType, ServiceLevelAgreementBoundary[] sla) {
-		if (sla == null) {
+	private double[] convertServiceLevelObjectives(Meter.Type meterType, ServiceLevelObjectiveBoundary[] slo) {
+		if (slo == null) {
 			return null;
 		}
-		long[] converted = Arrays.stream(sla).map((candidate) -> candidate.getValue(meterType)).filter(Objects::nonNull)
-				.mapToLong(Long::longValue).toArray();
+		double[] converted = Arrays.stream(slo)
+			.map((candidate) -> candidate.getValue(meterType))
+			.filter(Objects::nonNull)
+			.mapToDouble(Double::doubleValue)
+			.toArray();
 		return (converted.length != 0) ? converted : null;
 	}
 
-	private Long convertMeterValue(Meter.Type meterType, String value) {
+	private Double convertMeterValue(Meter.Type meterType, String value) {
 		return (value != null) ? MeterValue.valueOf(value).getValue(meterType) : null;
 	}
 
