@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,30 +20,34 @@ import java.time.Duration;
 import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 import javax.net.ssl.SSLException;
 
-import org.junit.After;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
 import reactor.netty.http.HttpResources;
 
+import org.springframework.boot.actuate.autoconfigure.cloudfoundry.servlet.CloudFoundryInfoEndpointWebExtension;
 import org.springframework.boot.actuate.autoconfigure.endpoint.EndpointAutoConfiguration;
 import org.springframework.boot.actuate.autoconfigure.endpoint.web.WebEndpointAutoConfiguration;
+import org.springframework.boot.actuate.autoconfigure.health.HealthContributorAutoConfiguration;
 import org.springframework.boot.actuate.autoconfigure.health.HealthEndpointAutoConfiguration;
-import org.springframework.boot.actuate.autoconfigure.health.HealthIndicatorAutoConfiguration;
+import org.springframework.boot.actuate.autoconfigure.info.InfoContributorAutoConfiguration;
+import org.springframework.boot.actuate.autoconfigure.info.InfoEndpointAutoConfiguration;
 import org.springframework.boot.actuate.autoconfigure.web.server.ManagementContextAutoConfiguration;
+import org.springframework.boot.actuate.endpoint.ApiVersion;
 import org.springframework.boot.actuate.endpoint.EndpointId;
-import org.springframework.boot.actuate.endpoint.ExposableEndpoint;
 import org.springframework.boot.actuate.endpoint.annotation.Endpoint;
 import org.springframework.boot.actuate.endpoint.annotation.ReadOperation;
-import org.springframework.boot.actuate.endpoint.http.ActuatorMediaType;
 import org.springframework.boot.actuate.endpoint.web.EndpointMapping;
 import org.springframework.boot.actuate.endpoint.web.ExposableWebEndpoint;
 import org.springframework.boot.actuate.endpoint.web.WebOperation;
+import org.springframework.boot.actuate.endpoint.web.WebOperationRequestPredicate;
 import org.springframework.boot.autoconfigure.AutoConfigurations;
 import org.springframework.boot.autoconfigure.context.PropertyPlaceholderAutoConfiguration;
 import org.springframework.boot.autoconfigure.http.HttpMessageConvertersAutoConfiguration;
+import org.springframework.boot.autoconfigure.info.ProjectInfoAutoConfiguration;
 import org.springframework.boot.autoconfigure.jackson.JacksonAutoConfiguration;
 import org.springframework.boot.autoconfigure.security.reactive.ReactiveSecurityAutoConfiguration;
 import org.springframework.boot.autoconfigure.security.reactive.ReactiveUserDetailsServiceAutoConfiguration;
@@ -73,205 +77,238 @@ import static org.mockito.Mockito.mock;
  *
  * @author Madhura Bhave
  */
-public class ReactiveCloudFoundryActuatorAutoConfigurationTests {
+class ReactiveCloudFoundryActuatorAutoConfigurationTests {
+
+	private static final String V2_JSON = ApiVersion.V2.getProducedMimeType().toString();
+
+	private static final String V3_JSON = ApiVersion.V3.getProducedMimeType().toString();
 
 	private final ReactiveWebApplicationContextRunner contextRunner = new ReactiveWebApplicationContextRunner()
-			.withConfiguration(AutoConfigurations.of(ReactiveSecurityAutoConfiguration.class,
-					ReactiveUserDetailsServiceAutoConfiguration.class, WebFluxAutoConfiguration.class,
-					JacksonAutoConfiguration.class, HttpMessageConvertersAutoConfiguration.class,
-					PropertyPlaceholderAutoConfiguration.class, WebClientCustomizerConfig.class,
-					WebClientAutoConfiguration.class, ManagementContextAutoConfiguration.class,
-					EndpointAutoConfiguration.class, WebEndpointAutoConfiguration.class,
-					HealthIndicatorAutoConfiguration.class, HealthEndpointAutoConfiguration.class,
-					ReactiveCloudFoundryActuatorAutoConfiguration.class));
+		.withConfiguration(AutoConfigurations.of(ReactiveSecurityAutoConfiguration.class,
+				ReactiveUserDetailsServiceAutoConfiguration.class, WebFluxAutoConfiguration.class,
+				JacksonAutoConfiguration.class, HttpMessageConvertersAutoConfiguration.class,
+				PropertyPlaceholderAutoConfiguration.class, WebClientCustomizerConfig.class,
+				WebClientAutoConfiguration.class, ManagementContextAutoConfiguration.class,
+				EndpointAutoConfiguration.class, WebEndpointAutoConfiguration.class,
+				HealthContributorAutoConfiguration.class, HealthEndpointAutoConfiguration.class,
+				InfoContributorAutoConfiguration.class, InfoEndpointAutoConfiguration.class,
+				ProjectInfoAutoConfiguration.class, ReactiveCloudFoundryActuatorAutoConfiguration.class));
 
-	@After
-	public void close() {
+	@AfterEach
+	void close() {
 		HttpResources.reset();
 	}
 
 	@Test
-	public void cloudFoundryPlatformActive() {
-		this.contextRunner.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
-				"vcap.application.cf_api:https://my-cloud-controller.com").run((context) -> {
-					CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
-					EndpointMapping endpointMapping = (EndpointMapping) ReflectionTestUtils.getField(handlerMapping,
-							"endpointMapping");
-					assertThat(endpointMapping.getPath()).isEqualTo("/cloudfoundryapplication");
-					CorsConfiguration corsConfiguration = (CorsConfiguration) ReflectionTestUtils
-							.getField(handlerMapping, "corsConfiguration");
-					assertThat(corsConfiguration.getAllowedOrigins()).contains("*");
-					assertThat(corsConfiguration.getAllowedMethods())
-							.containsAll(Arrays.asList(HttpMethod.GET.name(), HttpMethod.POST.name()));
-					assertThat(corsConfiguration.getAllowedHeaders())
-							.containsAll(Arrays.asList("Authorization", "X-Cf-App-Instance", "Content-Type"));
-				});
+	void cloudFoundryPlatformActive() {
+		this.contextRunner
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com")
+			.run((context) -> {
+				CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
+				EndpointMapping endpointMapping = (EndpointMapping) ReflectionTestUtils.getField(handlerMapping,
+						"endpointMapping");
+				assertThat(endpointMapping.getPath()).isEqualTo("/cloudfoundryapplication");
+				CorsConfiguration corsConfiguration = (CorsConfiguration) ReflectionTestUtils.getField(handlerMapping,
+						"corsConfiguration");
+				assertThat(corsConfiguration.getAllowedOrigins()).contains("*");
+				assertThat(corsConfiguration.getAllowedMethods())
+					.containsAll(Arrays.asList(HttpMethod.GET.name(), HttpMethod.POST.name()));
+				assertThat(corsConfiguration.getAllowedHeaders())
+					.containsAll(Arrays.asList("Authorization", "X-Cf-App-Instance", "Content-Type"));
+			});
 	}
 
 	@Test
-	public void cloudfoundryapplicationProducesActuatorMediaType() {
-		this.contextRunner.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
-				"vcap.application.cf_api:https://my-cloud-controller.com").run((context) -> {
-					WebTestClient webTestClient = WebTestClient.bindToApplicationContext(context).build();
-					webTestClient.get().uri("/cloudfoundryapplication").header("Content-Type",
-							ActuatorMediaType.V2_JSON + ";charset=UTF-8");
-				});
+	void cloudfoundryapplicationProducesActuatorMediaType() {
+		this.contextRunner
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com")
+			.run((context) -> {
+				WebTestClient webTestClient = WebTestClient.bindToApplicationContext(context).build();
+				webTestClient.get().uri("/cloudfoundryapplication").header("Content-Type", V2_JSON + ";charset=UTF-8");
+			});
 	}
 
 	@Test
-	public void cloudFoundryPlatformActiveSetsApplicationId() {
-		this.contextRunner.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
-				"vcap.application.cf_api:https://my-cloud-controller.com").run((context) -> {
-					CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
-					Object interceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
-					String applicationId = (String) ReflectionTestUtils.getField(interceptor, "applicationId");
-					assertThat(applicationId).isEqualTo("my-app-id");
-				});
+	void cloudFoundryPlatformActiveSetsApplicationId() {
+		this.contextRunner
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com")
+			.run((context) -> {
+				CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
+				Object interceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
+				String applicationId = (String) ReflectionTestUtils.getField(interceptor, "applicationId");
+				assertThat(applicationId).isEqualTo("my-app-id");
+			});
 	}
 
 	@Test
-	public void cloudFoundryPlatformActiveSetsCloudControllerUrl() {
-		this.contextRunner.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
-				"vcap.application.cf_api:https://my-cloud-controller.com").run((context) -> {
-					CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
-					Object interceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
-					Object interceptorSecurityService = ReflectionTestUtils.getField(interceptor,
-							"cloudFoundrySecurityService");
-					String cloudControllerUrl = (String) ReflectionTestUtils.getField(interceptorSecurityService,
-							"cloudControllerUrl");
-					assertThat(cloudControllerUrl).isEqualTo("https://my-cloud-controller.com");
-				});
+	void cloudFoundryPlatformActiveSetsCloudControllerUrl() {
+		this.contextRunner
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com")
+			.run((context) -> {
+				CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
+				Object interceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
+				Object interceptorSecurityService = ReflectionTestUtils.getField(interceptor,
+						"cloudFoundrySecurityService");
+				String cloudControllerUrl = (String) ReflectionTestUtils.getField(interceptorSecurityService,
+						"cloudControllerUrl");
+				assertThat(cloudControllerUrl).isEqualTo("https://my-cloud-controller.com");
+			});
 	}
 
 	@Test
-	public void cloudFoundryPlatformActiveAndCloudControllerUrlNotPresent() {
+	void cloudFoundryPlatformActiveAndCloudControllerUrlNotPresent() {
 		this.contextRunner.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id")
-				.run((context) -> {
-					CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = context.getBean(
-							"cloudFoundryWebFluxEndpointHandlerMapping",
-							CloudFoundryWebFluxEndpointHandlerMapping.class);
-					Object securityInterceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
-					Object interceptorSecurityService = ReflectionTestUtils.getField(securityInterceptor,
-							"cloudFoundrySecurityService");
-					assertThat(interceptorSecurityService).isNull();
-				});
+			.run((context) -> {
+				CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = context.getBean(
+						"cloudFoundryWebFluxEndpointHandlerMapping", CloudFoundryWebFluxEndpointHandlerMapping.class);
+				Object securityInterceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
+				Object interceptorSecurityService = ReflectionTestUtils.getField(securityInterceptor,
+						"cloudFoundrySecurityService");
+				assertThat(interceptorSecurityService).isNull();
+			});
 	}
 
 	@Test
 	@SuppressWarnings("unchecked")
-	public void cloudFoundryPathsIgnoredBySpringSecurity() {
-		this.contextRunner.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
-				"vcap.application.cf_api:https://my-cloud-controller.com").run((context) -> {
-					WebFilterChainProxy chainProxy = context.getBean(WebFilterChainProxy.class);
-					List<SecurityWebFilterChain> filters = (List<SecurityWebFilterChain>) ReflectionTestUtils
-							.getField(chainProxy, "filters");
-					Boolean cfRequestMatches = filters.get(0)
-							.matches(MockServerWebExchange
-									.from(MockServerHttpRequest.get("/cloudfoundryapplication/my-path").build()))
-							.block(Duration.ofSeconds(30));
-					Boolean otherRequestMatches = filters.get(0)
-							.matches(MockServerWebExchange.from(MockServerHttpRequest.get("/some-other-path").build()))
-							.block(Duration.ofSeconds(30));
-					assertThat(cfRequestMatches).isTrue();
-					assertThat(otherRequestMatches).isFalse();
-					otherRequestMatches = filters.get(1)
-							.matches(MockServerWebExchange.from(MockServerHttpRequest.get("/some-other-path").build()))
-							.block(Duration.ofSeconds(30));
-					assertThat(otherRequestMatches).isTrue();
-				});
+	void cloudFoundryPathsIgnoredBySpringSecurity() {
+		this.contextRunner
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com")
+			.run((context) -> {
+				WebFilterChainProxy chainProxy = context.getBean(WebFilterChainProxy.class);
+				List<SecurityWebFilterChain> filters = (List<SecurityWebFilterChain>) ReflectionTestUtils
+					.getField(chainProxy, "filters");
+				Boolean cfRequestMatches = filters.get(0)
+					.matches(MockServerWebExchange
+						.from(MockServerHttpRequest.get("/cloudfoundryapplication/my-path").build()))
+					.block(Duration.ofSeconds(30));
+				Boolean otherRequestMatches = filters.get(0)
+					.matches(MockServerWebExchange.from(MockServerHttpRequest.get("/some-other-path").build()))
+					.block(Duration.ofSeconds(30));
+				assertThat(cfRequestMatches).isTrue();
+				assertThat(otherRequestMatches).isFalse();
+				otherRequestMatches = filters.get(1)
+					.matches(MockServerWebExchange.from(MockServerHttpRequest.get("/some-other-path").build()))
+					.block(Duration.ofSeconds(30));
+				assertThat(otherRequestMatches).isTrue();
+			});
 
 	}
 
 	@Test
-	public void cloudFoundryPlatformInactive() {
-		this.contextRunner.run(
-				(context) -> assertThat(context.containsBean("cloudFoundryWebFluxEndpointHandlerMapping")).isFalse());
+	void cloudFoundryPlatformInactive() {
+		this.contextRunner
+			.run((context) -> assertThat(context.containsBean("cloudFoundryWebFluxEndpointHandlerMapping")).isFalse());
 	}
 
 	@Test
-	public void cloudFoundryManagementEndpointsDisabled() {
-		this.contextRunner.withPropertyValues("VCAP_APPLICATION=---", "management.cloudfoundry.enabled:false").run(
-				(context) -> assertThat(context.containsBean("cloudFoundryWebFluxEndpointHandlerMapping")).isFalse());
+	void cloudFoundryManagementEndpointsDisabled() {
+		this.contextRunner.withPropertyValues("VCAP_APPLICATION=---", "management.cloudfoundry.enabled:false")
+			.run((context) -> assertThat(context.containsBean("cloudFoundryWebFluxEndpointHandlerMapping")).isFalse());
 	}
 
 	@Test
-	public void allEndpointsAvailableUnderCloudFoundryWithoutEnablingWebIncludes() {
-		this.contextRunner.withUserConfiguration(TestConfiguration.class).withPropertyValues("VCAP_APPLICATION:---",
-				"vcap.application.application_id:my-app-id", "vcap.application.cf_api:https://my-cloud-controller.com")
-				.run((context) -> {
-					CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
-					Collection<ExposableWebEndpoint> endpoints = handlerMapping.getEndpoints();
-					List<EndpointId> endpointIds = endpoints.stream().map(ExposableEndpoint::getEndpointId)
-							.collect(Collectors.toList());
-					assertThat(endpointIds).contains(EndpointId.of("test"));
-				});
+	void allEndpointsAvailableUnderCloudFoundryWithoutEnablingWebIncludes() {
+		this.contextRunner.withBean(TestEndpoint.class, TestEndpoint::new)
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com")
+			.run((context) -> {
+				CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
+				Collection<ExposableWebEndpoint> endpoints = handlerMapping.getEndpoints();
+				List<EndpointId> endpointIds = endpoints.stream().map(ExposableWebEndpoint::getEndpointId).toList();
+				assertThat(endpointIds).contains(EndpointId.of("test"));
+			});
 	}
 
 	@Test
-	public void endpointPathCustomizationIsNotApplied() {
-		this.contextRunner.withUserConfiguration(TestConfiguration.class).withPropertyValues("VCAP_APPLICATION:---",
-				"vcap.application.application_id:my-app-id", "vcap.application.cf_api:https://my-cloud-controller.com")
-				.run((context) -> {
-					CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
-					Collection<ExposableWebEndpoint> endpoints = handlerMapping.getEndpoints();
-					ExposableWebEndpoint endpoint = endpoints.stream()
-							.filter((candidate) -> EndpointId.of("test").equals(candidate.getEndpointId())).findFirst()
-							.get();
-					assertThat(endpoint.getOperations()).hasSize(1);
-					WebOperation operation = endpoint.getOperations().iterator().next();
-					assertThat(operation.getRequestPredicate().getPath()).isEqualTo("test");
-				});
+	void endpointPathCustomizationIsNotApplied() {
+		this.contextRunner.withBean(TestEndpoint.class, TestEndpoint::new)
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com")
+			.run((context) -> {
+				CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
+				Collection<ExposableWebEndpoint> endpoints = handlerMapping.getEndpoints();
+				ExposableWebEndpoint endpoint = endpoints.stream()
+					.filter((candidate) -> EndpointId.of("test").equals(candidate.getEndpointId()))
+					.findFirst()
+					.get();
+				assertThat(endpoint.getOperations()).hasSize(1);
+				WebOperation operation = endpoint.getOperations().iterator().next();
+				assertThat(operation.getRequestPredicate().getPath()).isEqualTo("test");
+			});
 	}
 
 	@Test
-	public void healthEndpointInvokerShouldBeCloudFoundryWebExtension() {
+	void healthEndpointInvokerShouldBeCloudFoundryWebExtension() {
 		this.contextRunner.withConfiguration(AutoConfigurations.of(HealthEndpointAutoConfiguration.class))
-				.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
-						"vcap.application.cf_api:https://my-cloud-controller.com")
-				.run((context) -> {
-					Collection<ExposableWebEndpoint> endpoints = getHandlerMapping(context).getEndpoints();
-					ExposableWebEndpoint endpoint = endpoints.iterator().next();
-					assertThat(endpoint.getOperations()).hasSize(3);
-					WebOperation webOperation = findOperationWithRequestPath(endpoint, "health");
-					Object invoker = ReflectionTestUtils.getField(webOperation, "invoker");
-					assertThat(ReflectionTestUtils.getField(invoker, "target"))
-							.isInstanceOf(CloudFoundryReactiveHealthEndpointWebExtension.class);
-				});
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com")
+			.run((context) -> {
+				Collection<ExposableWebEndpoint> endpoints = getHandlerMapping(context).getEndpoints();
+				ExposableWebEndpoint endpoint = endpoints.iterator().next();
+				assertThat(endpoint.getOperations()).hasSize(2);
+				WebOperation webOperation = findOperationWithRequestPath(endpoint, "health");
+				assertThat(webOperation).extracting("invoker")
+					.extracting("target")
+					.isInstanceOf(CloudFoundryReactiveHealthEndpointWebExtension.class);
+			});
 	}
 
 	@Test
-	public void skipSslValidation() {
-		this.contextRunner.withConfiguration(AutoConfigurations.of(HealthEndpointAutoConfiguration.class))
-				.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
-						"vcap.application.cf_api:https://my-cloud-controller.com",
-						"management.cloudfoundry.skip-ssl-validation:true")
-				.run((context) -> {
-					CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
-					Object interceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
-					Object interceptorSecurityService = ReflectionTestUtils.getField(interceptor,
-							"cloudFoundrySecurityService");
-					WebClient webClient = (WebClient) ReflectionTestUtils.getField(interceptorSecurityService,
-							"webClient");
-					webClient.get().uri("https://self-signed.badssl.com/").exchange().block(Duration.ofSeconds(30));
-				});
+	@SuppressWarnings("unchecked")
+	void gitFullDetailsAlwaysPresent() {
+		this.contextRunner.withPropertyValues("VCAP_APPLICATION:---").run((context) -> {
+			CloudFoundryInfoEndpointWebExtension extension = context
+				.getBean(CloudFoundryInfoEndpointWebExtension.class);
+			Map<String, Object> git = (Map<String, Object>) extension.info().get("git");
+			Map<String, Object> commit = (Map<String, Object>) git.get("commit");
+			assertThat(commit).hasSize(4);
+		});
 	}
 
 	@Test
-	public void sslValidationNotSkippedByDefault() {
+	void skipSslValidation() {
 		this.contextRunner.withConfiguration(AutoConfigurations.of(HealthEndpointAutoConfiguration.class))
-				.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
-						"vcap.application.cf_api:https://my-cloud-controller.com")
-				.run((context) -> {
-					CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
-					Object interceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
-					Object interceptorSecurityService = ReflectionTestUtils.getField(interceptor,
-							"cloudFoundrySecurityService");
-					WebClient webClient = (WebClient) ReflectionTestUtils.getField(interceptorSecurityService,
-							"webClient");
-					assertThatExceptionOfType(RuntimeException.class).isThrownBy(() -> webClient.get()
-							.uri("https://self-signed.badssl.com/").exchange().block(Duration.ofSeconds(30)))
-							.withCauseInstanceOf(SSLException.class);
-				});
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com",
+					"management.cloudfoundry.skip-ssl-validation:true")
+			.run((context) -> {
+				CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
+				Object interceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
+				Object interceptorSecurityService = ReflectionTestUtils.getField(interceptor,
+						"cloudFoundrySecurityService");
+				WebClient webClient = (WebClient) ReflectionTestUtils.getField(interceptorSecurityService, "webClient");
+				webClient.get()
+					.uri("https://self-signed.badssl.com/")
+					.retrieve()
+					.toBodilessEntity()
+					.block(Duration.ofSeconds(30));
+			});
+	}
+
+	@Test
+	void sslValidationNotSkippedByDefault() {
+		this.contextRunner.withConfiguration(AutoConfigurations.of(HealthEndpointAutoConfiguration.class))
+			.withPropertyValues("VCAP_APPLICATION:---", "vcap.application.application_id:my-app-id",
+					"vcap.application.cf_api:https://my-cloud-controller.com")
+			.run((context) -> {
+				CloudFoundryWebFluxEndpointHandlerMapping handlerMapping = getHandlerMapping(context);
+				Object interceptor = ReflectionTestUtils.getField(handlerMapping, "securityInterceptor");
+				Object interceptorSecurityService = ReflectionTestUtils.getField(interceptor,
+						"cloudFoundrySecurityService");
+				WebClient webClient = (WebClient) ReflectionTestUtils.getField(interceptorSecurityService, "webClient");
+				assertThatExceptionOfType(RuntimeException.class)
+					.isThrownBy(() -> webClient.get()
+						.uri("https://self-signed.badssl.com/")
+						.retrieve()
+						.toBodilessEntity()
+						.block(Duration.ofSeconds(30)))
+					.withCauseInstanceOf(SSLException.class);
+			});
 	}
 
 	private CloudFoundryWebFluxEndpointHandlerMapping getHandlerMapping(ApplicationContext context) {
@@ -281,7 +318,8 @@ public class ReactiveCloudFoundryActuatorAutoConfigurationTests {
 
 	private WebOperation findOperationWithRequestPath(ExposableWebEndpoint endpoint, String requestPath) {
 		for (WebOperation operation : endpoint.getOperations()) {
-			if (operation.getRequestPredicate().getPath().equals(requestPath)) {
+			WebOperationRequestPredicate predicate = operation.getRequestPredicate();
+			if (predicate.getPath().equals(requestPath) && predicate.getProduces().contains(V3_JSON)) {
 				return operation;
 			}
 		}
@@ -289,31 +327,21 @@ public class ReactiveCloudFoundryActuatorAutoConfigurationTests {
 				"No operation found with request path " + requestPath + " from " + endpoint.getOperations());
 	}
 
-	@Configuration
-	static class TestConfiguration {
-
-		@Bean
-		public TestEndpoint testEndpoint() {
-			return new TestEndpoint();
-		}
-
-	}
-
 	@Endpoint(id = "test")
 	static class TestEndpoint {
 
 		@ReadOperation
-		public String hello() {
+		String hello() {
 			return "hello world";
 		}
 
 	}
 
-	@Configuration
+	@Configuration(proxyBeanMethods = false)
 	static class WebClientCustomizerConfig {
 
 		@Bean
-		public WebClientCustomizer webClientCustomizer() {
+		WebClientCustomizer webClientCustomizer() {
 			return mock(WebClientCustomizer.class);
 		}
 
