@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,15 +20,17 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
+import org.springframework.aot.hint.MemberCategory;
+import org.springframework.aot.hint.RuntimeHints;
+import org.springframework.aot.hint.predicate.RuntimeHintsPredicates;
 import org.springframework.boot.actuate.endpoint.EndpointId;
-import org.springframework.boot.actuate.endpoint.ExposableEndpoint;
 import org.springframework.boot.actuate.endpoint.annotation.DiscoveredEndpoint;
 import org.springframework.boot.actuate.endpoint.annotation.Endpoint;
 import org.springframework.boot.actuate.endpoint.annotation.ReadOperation;
+import org.springframework.boot.actuate.endpoint.web.annotation.ControllerEndpointDiscoverer.ControllerEndpointDiscovererRuntimeHints;
 import org.springframework.boot.autoconfigure.AutoConfigurations;
 import org.springframework.boot.autoconfigure.validation.ValidationAutoConfiguration;
 import org.springframework.boot.test.context.assertj.AssertableApplicationContext;
@@ -46,19 +48,20 @@ import static org.assertj.core.api.Assertions.assertThatIllegalStateException;
  *
  * @author Phillip Webb
  * @author Stephane Nicoll
+ * @author Moritz Halbritter
  */
-public class ControllerEndpointDiscovererTests {
+class ControllerEndpointDiscovererTests {
 
 	private final ApplicationContextRunner contextRunner = new ApplicationContextRunner();
 
 	@Test
-	public void getEndpointsWhenNoEndpointBeansShouldReturnEmptyCollection() {
+	void getEndpointsWhenNoEndpointBeansShouldReturnEmptyCollection() {
 		this.contextRunner.withUserConfiguration(EmptyConfiguration.class)
-				.run(assertDiscoverer((discoverer) -> assertThat(discoverer.getEndpoints()).isEmpty()));
+			.run(assertDiscoverer((discoverer) -> assertThat(discoverer.getEndpoints()).isEmpty()));
 	}
 
 	@Test
-	public void getEndpointsShouldIncludeControllerEndpoints() {
+	void getEndpointsShouldIncludeControllerEndpoints() {
 		this.contextRunner.withUserConfiguration(TestControllerEndpoint.class).run(assertDiscoverer((discoverer) -> {
 			Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
 			assertThat(endpoints).hasSize(1);
@@ -70,61 +73,70 @@ public class ControllerEndpointDiscovererTests {
 	}
 
 	@Test
-	public void getEndpointsShouldDiscoverProxyControllerEndpoints() {
+	void getEndpointsShouldDiscoverProxyControllerEndpoints() {
 		this.contextRunner.withUserConfiguration(TestProxyControllerEndpoint.class)
-				.withConfiguration(AutoConfigurations.of(ValidationAutoConfiguration.class))
-				.run(assertDiscoverer((discoverer) -> {
-					Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
-					assertThat(endpoints).hasSize(1);
-					ExposableControllerEndpoint endpoint = endpoints.iterator().next();
-					assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testcontroller"));
-					assertThat(endpoint.getController()).isInstanceOf(TestProxyControllerEndpoint.class);
-					assertThat(endpoint).isInstanceOf(DiscoveredEndpoint.class);
-				}));
+			.withConfiguration(AutoConfigurations.of(ValidationAutoConfiguration.class))
+			.run(assertDiscoverer((discoverer) -> {
+				Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
+				assertThat(endpoints).hasSize(1);
+				ExposableControllerEndpoint endpoint = endpoints.iterator().next();
+				assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testcontroller"));
+				assertThat(endpoint.getController()).isInstanceOf(TestProxyControllerEndpoint.class);
+				assertThat(endpoint).isInstanceOf(DiscoveredEndpoint.class);
+			}));
 	}
 
 	@Test
-	public void getEndpointsShouldIncludeRestControllerEndpoints() {
+	void getEndpointsShouldIncludeRestControllerEndpoints() {
 		this.contextRunner.withUserConfiguration(TestRestControllerEndpoint.class)
-				.run(assertDiscoverer((discoverer) -> {
-					Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
-					assertThat(endpoints).hasSize(1);
-					ExposableControllerEndpoint endpoint = endpoints.iterator().next();
-					assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testrestcontroller"));
-					assertThat(endpoint.getController()).isInstanceOf(TestRestControllerEndpoint.class);
-				}));
+			.run(assertDiscoverer((discoverer) -> {
+				Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
+				assertThat(endpoints).hasSize(1);
+				ExposableControllerEndpoint endpoint = endpoints.iterator().next();
+				assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testrestcontroller"));
+				assertThat(endpoint.getController()).isInstanceOf(TestRestControllerEndpoint.class);
+			}));
 	}
 
 	@Test
-	public void getEndpointsShouldDiscoverProxyRestControllerEndpoints() {
+	void getEndpointsShouldDiscoverProxyRestControllerEndpoints() {
 		this.contextRunner.withUserConfiguration(TestProxyRestControllerEndpoint.class)
-				.withConfiguration(AutoConfigurations.of(ValidationAutoConfiguration.class))
-				.run(assertDiscoverer((discoverer) -> {
-					Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
-					assertThat(endpoints).hasSize(1);
-					ExposableControllerEndpoint endpoint = endpoints.iterator().next();
-					assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testrestcontroller"));
-					assertThat(endpoint.getController()).isInstanceOf(TestProxyRestControllerEndpoint.class);
-					assertThat(endpoint).isInstanceOf(DiscoveredEndpoint.class);
-				}));
+			.withConfiguration(AutoConfigurations.of(ValidationAutoConfiguration.class))
+			.run(assertDiscoverer((discoverer) -> {
+				Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
+				assertThat(endpoints).hasSize(1);
+				ExposableControllerEndpoint endpoint = endpoints.iterator().next();
+				assertThat(endpoint.getEndpointId()).isEqualTo(EndpointId.of("testrestcontroller"));
+				assertThat(endpoint.getController()).isInstanceOf(TestProxyRestControllerEndpoint.class);
+				assertThat(endpoint).isInstanceOf(DiscoveredEndpoint.class);
+			}));
 	}
 
 	@Test
-	public void getEndpointsShouldNotDiscoverRegularEndpoints() {
+	void getEndpointsShouldNotDiscoverRegularEndpoints() {
 		this.contextRunner.withUserConfiguration(WithRegularEndpointConfiguration.class)
-				.run(assertDiscoverer((discoverer) -> {
-					Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
-					List<EndpointId> ids = endpoints.stream().map(ExposableEndpoint::getEndpointId)
-							.collect(Collectors.toList());
-					assertThat(ids).containsOnly(EndpointId.of("testcontroller"), EndpointId.of("testrestcontroller"));
-				}));
+			.run(assertDiscoverer((discoverer) -> {
+				Collection<ExposableControllerEndpoint> endpoints = discoverer.getEndpoints();
+				List<EndpointId> ids = endpoints.stream().map(ExposableControllerEndpoint::getEndpointId).toList();
+				assertThat(ids).containsOnly(EndpointId.of("testcontroller"), EndpointId.of("testrestcontroller"));
+			}));
 	}
 
 	@Test
-	public void getEndpointWhenEndpointHasOperationsShouldThrowException() {
-		this.contextRunner.withUserConfiguration(TestControllerWithOperation.class).run(
-				assertDiscoverer((discoverer) -> assertThatIllegalStateException().isThrownBy(discoverer::getEndpoints)
-						.withMessageContaining("ControllerEndpoints must not declare operations")));
+	void getEndpointWhenEndpointHasOperationsShouldThrowException() {
+		this.contextRunner.withUserConfiguration(TestControllerWithOperation.class)
+			.run(assertDiscoverer((discoverer) -> assertThatIllegalStateException().isThrownBy(discoverer::getEndpoints)
+				.withMessageContaining("ControllerEndpoints must not declare operations")));
+	}
+
+	@Test
+	void shouldRegisterHints() {
+		RuntimeHints runtimeHints = new RuntimeHints();
+		new ControllerEndpointDiscovererRuntimeHints().registerHints(runtimeHints, getClass().getClassLoader());
+		assertThat(RuntimeHintsPredicates.reflection()
+			.onType(ControllerEndpointFilter.class)
+			.withMemberCategories(MemberCategory.INVOKE_DECLARED_CONSTRUCTORS)).accepts(runtimeHints);
+
 	}
 
 	private ContextConsumer<AssertableApplicationContext> assertDiscoverer(
@@ -136,12 +148,12 @@ public class ControllerEndpointDiscovererTests {
 		};
 	}
 
-	@Configuration
+	@Configuration(proxyBeanMethods = false)
 	static class EmptyConfiguration {
 
 	}
 
-	@Configuration
+	@Configuration(proxyBeanMethods = false)
 	@Import({ TestEndpoint.class, TestControllerEndpoint.class, TestRestControllerEndpoint.class })
 	static class WithRegularEndpointConfiguration {
 
@@ -178,7 +190,7 @@ public class ControllerEndpointDiscovererTests {
 	static class TestControllerWithOperation {
 
 		@ReadOperation
-		public String read() {
+		String read() {
 			return "error";
 		}
 
