@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,6 @@
 
 package org.springframework.boot.autoconfigure.mongo;
 
-import java.util.stream.Collectors;
-
-import javax.annotation.PreDestroy;
-
 import com.mongodb.MongoClientSettings;
 import com.mongodb.MongoClientSettings.Builder;
 import com.mongodb.connection.netty.NettyStreamFactoryFactory;
@@ -31,6 +27,7 @@ import reactor.core.publisher.Flux;
 
 import org.springframework.beans.factory.DisposableBean;
 import org.springframework.beans.factory.ObjectProvider;
+import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnClass;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean;
@@ -39,90 +36,93 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.core.Ordered;
 import org.springframework.core.annotation.Order;
-import org.springframework.core.env.Environment;
 
 /**
  * {@link EnableAutoConfiguration Auto-configuration} for Reactive Mongo.
  *
  * @author Mark Paluch
  * @author Stephane Nicoll
+ * @author Scott Frederick
  * @since 2.0.0
  */
-@Configuration
+@AutoConfiguration
 @ConditionalOnClass({ MongoClient.class, Flux.class })
 @EnableConfigurationProperties(MongoProperties.class)
 public class MongoReactiveAutoConfiguration {
 
-	private final MongoClientSettings settings;
-
-	private MongoClient mongo;
-
-	public MongoReactiveAutoConfiguration(ObjectProvider<MongoClientSettings> settings) {
-		this.settings = settings.getIfAvailable();
-	}
-
-	@PreDestroy
-	public void close() {
-		if (this.mongo != null) {
-			this.mongo.close();
-		}
-	}
-
 	@Bean
 	@ConditionalOnMissingBean
-	public MongoClient reactiveStreamsMongoClient(MongoProperties properties, Environment environment,
-			ObjectProvider<MongoClientSettingsBuilderCustomizer> builderCustomizers) {
-		ReactiveMongoClientFactory factory = new ReactiveMongoClientFactory(properties, environment,
-				builderCustomizers.orderedStream().collect(Collectors.toList()));
-		this.mongo = factory.createMongoClient(this.settings);
-		return this.mongo;
+	public MongoClient reactiveStreamsMongoClient(
+			ObjectProvider<MongoClientSettingsBuilderCustomizer> builderCustomizers, MongoClientSettings settings) {
+		ReactiveMongoClientFactory factory = new ReactiveMongoClientFactory(
+				builderCustomizers.orderedStream().toList());
+		return factory.createMongoClient(settings);
 	}
 
-	@Configuration
+	@Configuration(proxyBeanMethods = false)
+	@ConditionalOnMissingBean(MongoClientSettings.class)
+	static class MongoClientSettingsConfiguration {
+
+		@Bean
+		MongoClientSettings mongoClientSettings() {
+			return MongoClientSettings.builder().build();
+		}
+
+		@Bean
+		MongoPropertiesClientSettingsBuilderCustomizer mongoPropertiesCustomizer(MongoProperties properties) {
+			return new MongoPropertiesClientSettingsBuilderCustomizer(properties);
+		}
+
+	}
+
+	@Configuration(proxyBeanMethods = false)
 	@ConditionalOnClass({ SocketChannel.class, NioEventLoopGroup.class })
 	static class NettyDriverConfiguration {
 
 		@Bean
 		@Order(Ordered.HIGHEST_PRECEDENCE)
-		public NettyDriverMongoClientSettingsBuilderCustomizer nettyDriverCustomizer(
+		NettyDriverMongoClientSettingsBuilderCustomizer nettyDriverCustomizer(
 				ObjectProvider<MongoClientSettings> settings) {
 			return new NettyDriverMongoClientSettingsBuilderCustomizer(settings);
 		}
 
-		private static final class NettyDriverMongoClientSettingsBuilderCustomizer
-				implements MongoClientSettingsBuilderCustomizer, DisposableBean {
+	}
 
-			private final ObjectProvider<MongoClientSettings> settings;
+	/**
+	 * {@link MongoClientSettingsBuilderCustomizer} to apply Mongo client settings.
+	 */
+	static final class NettyDriverMongoClientSettingsBuilderCustomizer
+			implements MongoClientSettingsBuilderCustomizer, DisposableBean {
 
-			private volatile EventLoopGroup eventLoopGroup;
+		private final ObjectProvider<MongoClientSettings> settings;
 
-			private NettyDriverMongoClientSettingsBuilderCustomizer(ObjectProvider<MongoClientSettings> settings) {
-				this.settings = settings;
+		private volatile EventLoopGroup eventLoopGroup;
+
+		NettyDriverMongoClientSettingsBuilderCustomizer(ObjectProvider<MongoClientSettings> settings) {
+			this.settings = settings;
+		}
+
+		@Override
+		public void customize(Builder builder) {
+			if (!isStreamFactoryFactoryDefined(this.settings.getIfAvailable())) {
+				NioEventLoopGroup eventLoopGroup = new NioEventLoopGroup();
+				this.eventLoopGroup = eventLoopGroup;
+				builder
+					.streamFactoryFactory(NettyStreamFactoryFactory.builder().eventLoopGroup(eventLoopGroup).build());
 			}
+		}
 
-			@Override
-			public void customize(Builder builder) {
-				if (!isStreamFactoryFactoryDefined(this.settings.getIfAvailable())) {
-					NioEventLoopGroup eventLoopGroup = new NioEventLoopGroup();
-					this.eventLoopGroup = eventLoopGroup;
-					builder.streamFactoryFactory(
-							NettyStreamFactoryFactory.builder().eventLoopGroup(eventLoopGroup).build());
-				}
+		@Override
+		public void destroy() {
+			EventLoopGroup eventLoopGroup = this.eventLoopGroup;
+			if (eventLoopGroup != null) {
+				eventLoopGroup.shutdownGracefully().awaitUninterruptibly();
+				this.eventLoopGroup = null;
 			}
+		}
 
-			@Override
-			public void destroy() {
-				EventLoopGroup eventLoopGroup = this.eventLoopGroup;
-				if (eventLoopGroup != null) {
-					eventLoopGroup.shutdownGracefully().awaitUninterruptibly();
-					this.eventLoopGroup = null;
-				}
-			}
-
-			private boolean isStreamFactoryFactoryDefined(MongoClientSettings settings) {
-				return settings != null && settings.getStreamFactoryFactory() != null;
-			}
-
+		private boolean isStreamFactoryFactoryDefined(MongoClientSettings settings) {
+			return settings != null && settings.getStreamFactoryFactory() != null;
 		}
 
 	}
