@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2020 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,11 +26,11 @@ import java.util.Map;
 import java.util.Properties;
 import java.util.stream.Collectors;
 
-import org.junit.Before;
-import org.junit.Test;
-import org.mockito.Answers;
+import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 import org.mockito.InOrder;
+import org.mockito.invocation.InvocationOnMock;
+import org.mockito.stubbing.Answer;
 
 import org.springframework.boot.context.properties.bind.BinderTests.ExampleEnum;
 import org.springframework.boot.context.properties.bind.BinderTests.JavaBean;
@@ -51,6 +51,7 @@ import static org.assertj.core.api.Assertions.entry;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.ArgumentMatchers.isA;
+import static org.mockito.BDDMockito.given;
 import static org.mockito.Mockito.inOrder;
 import static org.mockito.Mockito.mock;
 
@@ -60,7 +61,7 @@ import static org.mockito.Mockito.mock;
  * @author Phillip Webb
  * @author Madhura Bhave
  */
-public class MapBinderTests {
+class MapBinderTests {
 
 	private static final Bindable<Map<String, String>> STRING_STRING_MAP = Bindable.mapOf(String.class, String.class);
 
@@ -75,17 +76,12 @@ public class MapBinderTests {
 	private static final Bindable<Map<String, String[]>> STRING_ARRAY_MAP = Bindable.mapOf(String.class,
 			String[].class);
 
-	private List<ConfigurationPropertySource> sources = new ArrayList<>();
+	private final List<ConfigurationPropertySource> sources = new ArrayList<>();
 
-	private Binder binder;
-
-	@Before
-	public void setup() {
-		this.binder = new Binder(this.sources);
-	}
+	private Binder binder = new Binder(this.sources);
 
 	@Test
-	public void bindToMapShouldReturnPopulatedMap() {
+	void bindToMapShouldReturnPopulatedMap() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.bar", "1");
 		source.put("foo.[baz]", "2");
@@ -100,7 +96,7 @@ public class MapBinderTests {
 
 	@Test
 	@SuppressWarnings("unchecked")
-	public void bindToMapWithEmptyPrefix() {
+	void bindToMapWithEmptyPrefix() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.bar", "1");
 		this.sources.add(source);
@@ -109,7 +105,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapShouldConvertMapValue() {
+	void bindToMapShouldConvertMapValue() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.bar", "1");
 		source.put("foo.[baz]", "2");
@@ -124,7 +120,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapShouldBindToMapValue() {
+	void bindToMapShouldBindToMapValue() {
 		ResolvableType type = ResolvableType.forClassWithGenerics(Map.class, ResolvableType.forClass(String.class),
 				STRING_INTEGER_MAP.getType());
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
@@ -135,14 +131,15 @@ public class MapBinderTests {
 		source.put("faf.far.bin", "x");
 		this.sources.add(source);
 		Map<String, Map<String, Integer>> result = this.binder
-				.bind("foo", Bindable.<Map<String, Map<String, Integer>>>of(type)).get();
+			.bind("foo", Bindable.<Map<String, Map<String, Integer>>>of(type))
+			.get();
 		assertThat(result).hasSize(2);
 		assertThat(result.get("bar")).containsEntry("baz", 1).containsEntry("bin", 2);
 		assertThat(result.get("far")).containsEntry("baz", 3).containsEntry("bin", 4);
 	}
 
 	@Test
-	public void bindToMapShouldBindNestedMapValue() {
+	void bindToMapShouldBindNestedMapValue() {
 		ResolvableType nestedType = ResolvableType.forClassWithGenerics(Map.class,
 				ResolvableType.forClass(String.class), STRING_INTEGER_MAP.getType());
 		ResolvableType type = ResolvableType.forClassWithGenerics(Map.class, ResolvableType.forClass(String.class),
@@ -164,7 +161,7 @@ public class MapBinderTests {
 
 	@Test
 	@SuppressWarnings("unchecked")
-	public void bindToMapWhenMapValueIsObjectShouldBindNestedMapValue() {
+	void bindToMapWhenMapValueIsObjectShouldBindNestedMapValue() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.nested.bar.baz", "1");
 		source.put("foo.nested.bar.bin", "2");
@@ -182,20 +179,20 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWhenMapValueIsObjectAndNoRootShouldBindNestedMapValue() {
+	void bindToMapWhenMapValueIsObjectAndNoRootShouldBindNestedMapValue() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("commit.id", "abcdefg");
 		source.put("branch", "master");
 		source.put("foo", "bar");
 		this.sources.add(source);
 		Map<String, Object> result = this.binder.bind("", Bindable.mapOf(String.class, Object.class)).get();
-		assertThat(result.get("commit")).isEqualTo(Collections.singletonMap("id", "abcdefg"));
-		assertThat(result.get("branch")).isEqualTo("master");
-		assertThat(result.get("foo")).isEqualTo("bar");
+		assertThat(result).containsEntry("commit", Collections.singletonMap("id", "abcdefg"));
+		assertThat(result).containsEntry("branch", "master");
+		assertThat(result).containsEntry("foo", "bar");
 	}
 
 	@Test
-	public void bindToMapWhenEmptyRootNameShouldBindMap() {
+	void bindToMapWhenEmptyRootNameShouldBindMap() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("bar.baz", "1");
 		source.put("bar.bin", "2");
@@ -206,7 +203,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWhenMultipleCandidateShouldBindFirst() {
+	void bindToMapWhenMultipleCandidateShouldBindFirst() {
 		MockConfigurationPropertySource source1 = new MockConfigurationPropertySource();
 		source1.put("foo.bar", "1");
 		source1.put("foo.baz", "2");
@@ -223,7 +220,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWhenMultipleInSameSourceCandidateShouldBindFirst() {
+	void bindToMapWhenMultipleInSameSourceCandidateShouldBindFirst() {
 		Map<String, Object> map = new HashMap<>();
 		map.put("foo.bar", "1");
 		map.put("foo.b-az", "2");
@@ -240,7 +237,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWhenHasExistingMapShouldReplaceOnlyNewContents() {
+	void bindToMapWhenHasExistingMapShouldReplaceOnlyNewContents() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar", "1"));
 		Map<String, Integer> existing = new HashMap<>();
 		existing.put("bar", 1000);
@@ -254,7 +251,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapShouldRespectMapType() {
+	void bindToMapShouldRespectMapType() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar", "1"));
 		ResolvableType type = ResolvableType.forClassWithGenerics(HashMap.class, String.class, Integer.class);
 		Object defaultMap = this.binder.bind("foo", STRING_INTEGER_MAP).get();
@@ -263,14 +260,14 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWhenNoValueShouldReturnUnbound() {
+	void bindToMapWhenNoValueShouldReturnUnbound() {
 		this.sources.add(new MockConfigurationPropertySource("faf.bar", "1"));
 		BindResult<Map<String, Integer>> result = this.binder.bind("foo", STRING_INTEGER_MAP);
 		assertThat(result.isBound()).isFalse();
 	}
 
 	@Test
-	public void bindToMapShouldConvertKey() {
+	void bindToMapShouldConvertKey() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo[0]", "1");
 		source.put("foo[1]", "2");
@@ -284,7 +281,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapShouldBeGreedyForStrings() {
+	void bindToMapShouldBeGreedyForStrings() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.aaa.bbb.ccc", "b");
 		source.put("foo.bbb.ccc.ddd", "a");
@@ -298,14 +295,14 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapShouldBeGreedyForScalars() {
+	void bindToMapShouldBeGreedyForScalars() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.aaa.bbb.ccc", "foo-bar");
 		source.put("foo.bbb.ccc.ddd", "BAR_BAZ");
 		source.put("foo.ccc.ddd.eee", "bazboo");
 		this.sources.add(source);
 		Map<String, ExampleEnum> result = this.binder.bind("foo", Bindable.mapOf(String.class, ExampleEnum.class))
-				.get();
+			.get();
 		assertThat(result).hasSize(3);
 		assertThat(result).containsEntry("aaa.bbb.ccc", ExampleEnum.FOO_BAR);
 		assertThat(result).containsEntry("bbb.ccc.ddd", ExampleEnum.BAR_BAZ);
@@ -313,19 +310,19 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWithPlaceholdersShouldBeGreedyForScalars() {
+	void bindToMapWithPlaceholdersShouldBeGreedyForScalars() {
 		StandardEnvironment environment = new StandardEnvironment();
 		TestPropertySourceUtils.addInlinedPropertiesToEnvironment(environment, "foo=boo");
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource("foo.aaa.bbb.ccc", "baz-${foo}");
 		this.sources.add(source);
 		this.binder = new Binder(this.sources, new PropertySourcesPlaceholdersResolver(environment));
 		Map<String, ExampleEnum> result = this.binder.bind("foo", Bindable.mapOf(String.class, ExampleEnum.class))
-				.get();
+			.get();
 		assertThat(result).containsEntry("aaa.bbb.ccc", ExampleEnum.BAZ_BOO);
 	}
 
 	@Test
-	public void bindToMapWithNoPropertiesShouldReturnUnbound() {
+	void bindToMapWithNoPropertiesShouldReturnUnbound() {
 		this.binder = new Binder(this.sources);
 		BindResult<Map<String, ExampleEnum>> result = this.binder.bind("foo",
 				Bindable.mapOf(String.class, ExampleEnum.class));
@@ -333,33 +330,34 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapShouldTriggerOnSuccess() {
+	void bindToMapShouldTriggerOnSuccess() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar", "1", "line1"));
-		BindHandler handler = mock(BindHandler.class, Answers.CALLS_REAL_METHODS);
+		BindHandler handler = mockBindHandler();
 		Bindable<Map<String, Integer>> target = STRING_INTEGER_MAP;
 		this.binder.bind("foo", target, handler);
 		InOrder ordered = inOrder(handler);
-		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(Integer.class)),
-				any(), eq(1));
+		ordered.verify(handler)
+			.onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(Integer.class)), any(), eq(1));
 		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo")), eq(target), any(), isA(Map.class));
 	}
 
 	@Test
-	public void bindToMapStringArrayShouldTriggerOnSuccess() {
+	void bindToMapStringArrayShouldTriggerOnSuccess() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar", "a,b,c", "line1"));
-		BindHandler handler = mock(BindHandler.class, Answers.CALLS_REAL_METHODS);
+		BindHandler handler = mockBindHandler();
 		Bindable<Map<String, String[]>> target = STRING_ARRAY_MAP;
 		this.binder.bind("foo", target, handler);
 		InOrder ordered = inOrder(handler);
 		ArgumentCaptor<String[]> array = ArgumentCaptor.forClass(String[].class);
-		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(String[].class)),
-				any(), array.capture());
+		ordered.verify(handler)
+			.onSuccess(eq(ConfigurationPropertyName.of("foo.bar")), eq(Bindable.of(String[].class)), any(),
+					array.capture());
 		assertThat(array.getValue()).containsExactly("a", "b", "c");
 		ordered.verify(handler).onSuccess(eq(ConfigurationPropertyName.of("foo")), eq(target), any(), isA(Map.class));
 	}
 
 	@Test
-	public void bindToMapNonScalarCollectionShouldPopulateMap() {
+	void bindToMapNonScalarCollectionShouldPopulateMap() {
 		Bindable<List<JavaBean>> valueType = Bindable.listOf(JavaBean.class);
 		Bindable<Map<String, List<JavaBean>>> target = getMapBindable(String.class, valueType.getType());
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
@@ -368,13 +366,13 @@ public class MapBinderTests {
 		source.put("foo.bar[2].value", "c");
 		this.sources.add(source);
 		Map<String, List<JavaBean>> map = this.binder.bind("foo", target).get();
-		List<String> values = map.get("bar").stream().map(JavaBean::getValue).collect(Collectors.toList());
+		List<String> values = map.get("bar").stream().map(JavaBean::getValue).toList();
 		assertThat(values).containsExactly("a", "b", "c");
 
 	}
 
 	@Test
-	public void bindToPropertiesShouldBeEquivalentToMapOfStringString() {
+	void bindToPropertiesShouldBeEquivalentToMapOfStringString() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar.baz", "1", "line1"));
 		Bindable<Properties> target = Bindable.of(Properties.class);
 		Properties properties = this.binder.bind("foo", target).get();
@@ -382,7 +380,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapShouldNotTreatClassWithStringConstructorAsScalar() {
+	void bindToMapShouldNotTreatClassWithStringConstructorAsScalar() {
 		this.sources.add(new MockConfigurationPropertySource("foo.bar.pattern", "1", "line1"));
 		Bindable<Map<String, Foo>> target = Bindable.mapOf(String.class, Foo.class);
 		Map<String, Foo> map = this.binder.bind("foo", target).get();
@@ -390,7 +388,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapStringArrayWithDotKeysShouldPreserveDot() {
+	void bindToMapStringArrayWithDotKeysShouldPreserveDot() {
 		MockConfigurationPropertySource mockSource = new MockConfigurationPropertySource();
 		mockSource.put("foo.bar.baz[0]", "a");
 		mockSource.put("foo.bar.baz[1]", "b");
@@ -401,7 +399,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapStringArrayWithDotKeysAndCommaSeparatedShouldPreserveDot() {
+	void bindToMapStringArrayWithDotKeysAndCommaSeparatedShouldPreserveDot() {
 		MockConfigurationPropertySource mockSource = new MockConfigurationPropertySource();
 		mockSource.put("foo.bar.baz", "a,b,c");
 		this.sources.add(mockSource);
@@ -410,7 +408,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapStringCollectionWithDotKeysShouldPreserveDot() {
+	void bindToMapStringCollectionWithDotKeysShouldPreserveDot() {
 		Bindable<List<String>> valueType = Bindable.listOf(String.class);
 		Bindable<Map<String, List<String>>> target = getMapBindable(String.class, valueType.getType());
 		MockConfigurationPropertySource mockSource = new MockConfigurationPropertySource();
@@ -424,7 +422,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapNonScalarCollectionWithDotKeysShouldBind() {
+	void bindToMapNonScalarCollectionWithDotKeysShouldBind() {
 		Bindable<List<JavaBean>> valueType = Bindable.listOf(JavaBean.class);
 		Bindable<Map<String, List<JavaBean>>> target = getMapBindable(String.class, valueType.getType());
 		MockConfigurationPropertySource mockSource = new MockConfigurationPropertySource();
@@ -433,12 +431,12 @@ public class MapBinderTests {
 		mockSource.put("foo.bar.baz[2].value", "c");
 		this.sources.add(mockSource);
 		Map<String, List<JavaBean>> map = this.binder.bind("foo", target).get();
-		List<String> values = map.get("bar.baz").stream().map(JavaBean::getValue).collect(Collectors.toList());
+		List<String> values = map.get("bar.baz").stream().map(JavaBean::getValue).toList();
 		assertThat(values).containsExactly("a", "b", "c");
 	}
 
 	@Test
-	public void bindToListOfMaps() {
+	void bindToListOfMaps() {
 		Bindable<List<Integer>> listBindable = Bindable.listOf(Integer.class);
 		Bindable<Map<String, List<Integer>>> mapBindable = getMapBindable(String.class, listBindable.getType());
 		Bindable<List<Map<String, List<Integer>>>> target = getListBindable(mapBindable.getType());
@@ -452,7 +450,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWithNumberKeyAndCommaSeparated() {
+	void bindToMapWithNumberKeyAndCommaSeparated() {
 		Bindable<List<String>> listBindable = Bindable.listOf(String.class);
 		Bindable<Map<Integer, List<String>>> target = getMapBindable(Integer.class, listBindable.getType());
 		MockConfigurationPropertySource mockSource = new MockConfigurationPropertySource();
@@ -465,7 +463,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWithNumberKeyAndIndexed() {
+	void bindToMapWithNumberKeyAndIndexed() {
 		Bindable<List<Integer>> listBindable = Bindable.listOf(Integer.class);
 		Bindable<Map<Integer, List<Integer>>> target = getMapBindable(Integer.class, listBindable.getType());
 		MockConfigurationPropertySource mockSource = new MockConfigurationPropertySource();
@@ -477,7 +475,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindingWithSquareBracketMap() {
+	void bindingWithSquareBracketMap() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.[x [B] y]", "[ball]");
 		this.sources.add(source);
@@ -486,7 +484,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void nestedMapsShouldNotBindToNull() {
+	void nestedMapsShouldNotBindToNull() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.value", "one");
 		source.put("foo.foos.foo1.value", "two");
@@ -499,7 +497,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWithCustomConverter() {
+	void bindToMapWithCustomConverter() {
 		DefaultConversionService conversionService = new DefaultConversionService();
 		conversionService.addConverter(new MapConverter());
 		Binder binder = new Binder(this.sources, null, conversionService, null);
@@ -507,12 +505,12 @@ public class MapBinderTests {
 		source.put("foo", "a,b");
 		this.sources.add(source);
 		Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
-		assertThat(map.get("a")).isNotNull();
-		assertThat(map.get("b")).isNotNull();
+		assertThat(map).containsKey("a");
+		assertThat(map).containsKey("b");
 	}
 
 	@Test
-	public void bindToMapWithCustomConverterAndChildElements() {
+	void bindToMapWithCustomConverterAndChildElements() {
 		// gh-11892
 		DefaultConversionService conversionService = new DefaultConversionService();
 		conversionService.addConverter(new MapConverter());
@@ -523,12 +521,12 @@ public class MapBinderTests {
 		source.put("foo.b", "b");
 		this.sources.add(source);
 		Map<String, String> map = binder.bind("foo", STRING_STRING_MAP).get();
-		assertThat(map.get("a")).isEqualTo("a");
-		assertThat(map.get("b")).isEqualTo("b");
+		assertThat(map).containsEntry("a", "a");
+		assertThat(map).containsEntry("b", "b");
 	}
 
 	@Test
-	public void bindToMapWithNoConverterForValue() {
+	void bindToMapWithNoConverterForValue() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo", "a,b");
 		this.sources.add(source);
@@ -537,7 +535,7 @@ public class MapBinderTests {
 
 	@Test
 	@SuppressWarnings("rawtypes")
-	public void bindToMapWithPropertyEditorForKey() {
+	void bindToMapWithPropertyEditorForKey() {
 		// gh-12166
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.[java.lang.RuntimeException]", "bar");
@@ -548,7 +546,7 @@ public class MapBinderTests {
 
 	@Test
 	@SuppressWarnings("rawtypes")
-	public void bindToMapWithPropertyEditorForValue() {
+	void bindToMapWithPropertyEditorForValue() {
 		// gh-12166
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.bar", "java.lang.RuntimeException");
@@ -558,40 +556,43 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWithNoDefaultConstructor() {
+	void bindToMapWithNoDefaultConstructor() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.items.a", "b");
 		this.sources.add(source);
 		ExampleCustomNoDefaultConstructorBean result = this.binder
-				.bind("foo", ExampleCustomNoDefaultConstructorBean.class).get();
+			.bind("foo", ExampleCustomNoDefaultConstructorBean.class)
+			.get();
 		assertThat(result.getItems()).containsOnly(entry("foo", "bar"), entry("a", "b"));
 	}
 
 	@Test
-	public void bindToMapWithDefaultConstructor() {
+	void bindToMapWithDefaultConstructor() {
 		// gh-12322
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.items.a", "b");
 		this.sources.add(source);
 		ExampleCustomWithDefaultConstructorBean result = this.binder
-				.bind("foo", ExampleCustomWithDefaultConstructorBean.class).get();
+			.bind("foo", ExampleCustomWithDefaultConstructorBean.class)
+			.get();
 		assertThat(result.getItems()).containsExactly(entry("a", "b"));
 	}
 
 	@Test
-	public void bindToImmutableMapShouldReturnPopulatedMap() {
+	void bindToImmutableMapShouldReturnPopulatedMap() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.values.c", "d");
 		source.put("foo.values.e", "f");
 		this.sources.add(source);
 		Map<String, String> result = this.binder
-				.bind("foo.values", STRING_STRING_MAP.withExistingValue(Collections.singletonMap("a", "b"))).get();
+			.bind("foo.values", STRING_STRING_MAP.withExistingValue(Collections.singletonMap("a", "b")))
+			.get();
 		assertThat(result).hasSize(3);
 		assertThat(result).containsExactly(entry("a", "b"), entry("c", "d"), entry("e", "f"));
 	}
 
 	@Test
-	public void bindToBeanWithExceptionInGetterForExistingValue() {
+	void bindToBeanWithExceptionInGetterForExistingValue() {
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.values.a", "b");
 		this.sources.add(source);
@@ -600,7 +601,7 @@ public class MapBinderTests {
 	}
 
 	@Test
-	public void bindToMapWithWildcardShouldConvertToTheRightType() {
+	void bindToMapWithWildcardShouldConvertToTheRightType() {
 		// gh-18767
 		MockConfigurationPropertySource source = new MockConfigurationPropertySource();
 		source.put("foo.addresses.localhost[0]", "127.0.0.1");
@@ -608,7 +609,7 @@ public class MapBinderTests {
 		this.sources.add(source);
 		MapWithWildcardProperties result = this.binder.bind("foo", Bindable.of(MapWithWildcardProperties.class)).get();
 		assertThat(result.getAddresses().get("localhost").stream().map(InetAddress::getHostAddress))
-				.containsExactly("127.0.0.1", "127.0.0.2");
+			.containsExactly("127.0.0.1", "127.0.0.2");
 	}
 
 	private <K, V> Bindable<Map<K, V>> getMapBindable(Class<K> keyGeneric, ResolvableType valueType) {
@@ -620,22 +621,30 @@ public class MapBinderTests {
 		return Bindable.of(ResolvableType.forClassWithGenerics(List.class, type));
 	}
 
-	public static class Foo {
+	private BindHandler mockBindHandler() {
+		BindHandler handler = mock(BindHandler.class);
+		given(handler.onStart(any(), any(), any())).willAnswer(InvocationArgument.index(1));
+		given(handler.onCreate(any(), any(), any(), any())).willAnswer(InvocationArgument.index(3));
+		given(handler.onSuccess(any(), any(), any(), any())).willAnswer(InvocationArgument.index(3));
+		return handler;
+	}
+
+	static class Foo {
 
 		private String pattern;
 
-		public Foo() {
+		Foo() {
 		}
 
-		public Foo(String pattern) {
+		Foo(String pattern) {
 			this.pattern = pattern;
 		}
 
-		public String getPattern() {
+		String getPattern() {
 			return this.pattern;
 		}
 
-		public void setPattern(String pattern) {
+		void setPattern(String pattern) {
 			this.pattern = pattern;
 		}
 
@@ -643,19 +652,19 @@ public class MapBinderTests {
 
 	static class NestableFoo {
 
-		private Map<String, NestableFoo> foos = new LinkedHashMap<>();
+		private final Map<String, NestableFoo> foos = new LinkedHashMap<>();
 
 		private String value;
 
-		public Map<String, NestableFoo> getFoos() {
+		Map<String, NestableFoo> getFoos() {
 			return this.foos;
 		}
 
-		public String getValue() {
+		String getValue() {
 			return this.value;
 		}
 
-		public void setValue(String value) {
+		void setValue(String value) {
 			this.value = value;
 		}
 
@@ -670,72 +679,91 @@ public class MapBinderTests {
 
 	}
 
-	public static class ExampleCustomNoDefaultConstructorBean {
+	static class ExampleCustomNoDefaultConstructorBean {
 
 		private MyCustomNoDefaultConstructorMap items = new MyCustomNoDefaultConstructorMap(
 				Collections.singletonMap("foo", "bar"));
 
-		public MyCustomNoDefaultConstructorMap getItems() {
+		MyCustomNoDefaultConstructorMap getItems() {
 			return this.items;
 		}
 
-		public void setItems(MyCustomNoDefaultConstructorMap items) {
+		void setItems(MyCustomNoDefaultConstructorMap items) {
 			this.items = items;
 		}
 
 	}
 
-	public static class MyCustomNoDefaultConstructorMap extends HashMap<String, String> {
+	static class MyCustomNoDefaultConstructorMap extends HashMap<String, String> {
 
-		public MyCustomNoDefaultConstructorMap(Map<String, String> items) {
+		MyCustomNoDefaultConstructorMap(Map<String, String> items) {
 			putAll(items);
 		}
 
 	}
 
-	public static class ExampleCustomWithDefaultConstructorBean {
+	static class ExampleCustomWithDefaultConstructorBean {
 
-		private MyCustomWithDefaultConstructorMap items = new MyCustomWithDefaultConstructorMap();
+		private final MyCustomWithDefaultConstructorMap items = new MyCustomWithDefaultConstructorMap();
 
-		public MyCustomWithDefaultConstructorMap getItems() {
+		MyCustomWithDefaultConstructorMap getItems() {
 			return this.items;
 		}
 
-		public void setItems(MyCustomWithDefaultConstructorMap items) {
+		void setItems(MyCustomWithDefaultConstructorMap items) {
 			this.items.clear();
 			this.items.putAll(items);
 		}
 
 	}
 
-	public static class MyCustomWithDefaultConstructorMap extends HashMap<String, String> {
+	static class MyCustomWithDefaultConstructorMap extends HashMap<String, String> {
 
 	}
 
-	public static class BeanWithGetterException {
+	static class BeanWithGetterException {
 
 		private Map<String, String> values;
 
-		public void setValues(Map<String, String> values) {
+		void setValues(Map<String, String> values) {
 			this.values = values;
 		}
 
-		public Map<String, String> getValues() {
+		Map<String, String> getValues() {
 			return Collections.unmodifiableMap(this.values);
 		}
 
 	}
 
-	public static class MapWithWildcardProperties {
+	static class MapWithWildcardProperties {
 
 		private Map<String, ? extends List<? extends InetAddress>> addresses;
 
-		public Map<String, ? extends List<? extends InetAddress>> getAddresses() {
+		Map<String, ? extends List<? extends InetAddress>> getAddresses() {
 			return this.addresses;
 		}
 
-		public void setAddresses(Map<String, ? extends List<? extends InetAddress>> addresses) {
+		void setAddresses(Map<String, ? extends List<? extends InetAddress>> addresses) {
 			this.addresses = addresses;
+		}
+
+	}
+
+	private static final class InvocationArgument<T> implements Answer<T> {
+
+		private final int index;
+
+		private InvocationArgument(int index) {
+			this.index = index;
+		}
+
+		@Override
+		public T answer(InvocationOnMock invocation) throws Throwable {
+			return invocation.getArgument(this.index);
+		}
+
+		private static <T> InvocationArgument<T> index(int index) {
+			return new InvocationArgument<>(index);
 		}
 
 	}
