@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2019 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,43 +20,45 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.StringReader;
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
 import org.springframework.beans.factory.BeanCurrentlyInCreationException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.support.AbstractAutowireCapableBeanFactory;
 import org.springframework.boot.diagnostics.FailureAnalysis;
-import org.springframework.boot.diagnostics.FailureAnalyzer;
 import org.springframework.boot.diagnostics.analyzer.BeanCurrentlyInCreationFailureAnalyzerTests.CycleWithAutowiredFields.BeanThreeConfiguration;
 import org.springframework.boot.diagnostics.analyzer.BeanCurrentlyInCreationFailureAnalyzerTests.CycleWithAutowiredFields.BeanTwoConfiguration;
 import org.springframework.boot.diagnostics.analyzer.BeanCurrentlyInCreationFailureAnalyzerTests.CyclicBeanMethodsConfiguration.InnerConfiguration;
 import org.springframework.boot.diagnostics.analyzer.BeanCurrentlyInCreationFailureAnalyzerTests.CyclicBeanMethodsConfiguration.InnerConfiguration.InnerInnerConfiguration;
-import org.springframework.context.ConfigurableApplicationContext;
 import org.springframework.context.annotation.AnnotationConfigApplicationContext;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.fail;
 
 /**
  * Tests for {@link BeanCurrentlyInCreationFailureAnalyzer}.
  *
  * @author Andy Wilkinson
+ * @author Scott Frederick
  */
-public class BeanCurrentlyInCreationFailureAnalyzerTests {
+class BeanCurrentlyInCreationFailureAnalyzerTests {
 
-	private final FailureAnalyzer analyzer = new BeanCurrentlyInCreationFailureAnalyzer();
+	private final AnnotationConfigApplicationContext context = new AnnotationConfigApplicationContext();
+
+	private final BeanCurrentlyInCreationFailureAnalyzer analyzer = new BeanCurrentlyInCreationFailureAnalyzer(
+			this.context.getBeanFactory());
 
 	@Test
-	public void cyclicBeanMethods() throws IOException {
+	void cyclicBeanMethods() throws IOException {
 		FailureAnalysis analysis = performAnalysis(CyclicBeanMethodsConfiguration.class);
 		List<String> lines = readDescriptionLines(analysis);
 		assertThat(lines).hasSize(9);
 		assertThat(lines.get(0))
-				.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
-		assertThat(lines.get(1)).isEqualTo("");
+			.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
+		assertThat(lines.get(1)).isEmpty();
 		assertThat(lines.get(2)).isEqualTo("┌─────┐");
 		assertThat(lines.get(3)).startsWith("|  one defined in " + InnerInnerConfiguration.class.getName());
 		assertThat(lines.get(4)).isEqualTo("↑     ↓");
@@ -64,70 +66,108 @@ public class BeanCurrentlyInCreationFailureAnalyzerTests {
 		assertThat(lines.get(6)).isEqualTo("↑     ↓");
 		assertThat(lines.get(7)).startsWith("|  three defined in " + CyclicBeanMethodsConfiguration.class.getName());
 		assertThat(lines.get(8)).isEqualTo("└─────┘");
+		assertThat(analysis.getAction()).isNotNull();
 	}
 
 	@Test
-	public void cycleWithAutowiredFields() throws IOException {
+	void cycleWithAutowiredFields() throws IOException {
 		FailureAnalysis analysis = performAnalysis(CycleWithAutowiredFields.class);
 		assertThat(analysis.getDescription())
-				.startsWith("The dependencies of some of the beans in the application context form a cycle:");
+			.startsWith("The dependencies of some of the beans in the application context form a cycle:");
 		List<String> lines = readDescriptionLines(analysis);
 		assertThat(lines).hasSize(9);
 		assertThat(lines.get(0))
-				.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
-		assertThat(lines.get(1)).isEqualTo("");
+			.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
+		assertThat(lines.get(1)).isEmpty();
 		assertThat(lines.get(2)).isEqualTo("┌─────┐");
 		assertThat(lines.get(3)).startsWith("|  three defined in " + BeanThreeConfiguration.class.getName());
 		assertThat(lines.get(4)).isEqualTo("↑     ↓");
 		assertThat(lines.get(5)).startsWith("|  one defined in " + CycleWithAutowiredFields.class.getName());
 		assertThat(lines.get(6)).isEqualTo("↑     ↓");
-		assertThat(lines.get(7)).startsWith(
-				"|  " + BeanTwoConfiguration.class.getName() + " (field private " + BeanThree.class.getName());
+		assertThat(lines.get(7))
+			.startsWith("|  " + BeanTwoConfiguration.class.getName() + " (field private " + BeanThree.class.getName());
 		assertThat(lines.get(8)).isEqualTo("└─────┘");
+		assertThat(analysis.getAction()).isNotNull();
 	}
 
 	@Test
-	public void cycleReferencedViaOtherBeans() throws IOException {
+	void cycleReferencedViaOtherBeans() throws IOException {
 		FailureAnalysis analysis = performAnalysis(CycleReferencedViaOtherBeansConfiguration.class);
 		List<String> lines = readDescriptionLines(analysis);
 		assertThat(lines).hasSize(12);
 		assertThat(lines.get(0))
-				.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
-		assertThat(lines.get(1)).isEqualTo("");
-		assertThat(lines.get(2)).contains("refererOne " + "(field " + RefererTwo.class.getName());
+			.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
+		assertThat(lines.get(1)).isEmpty();
+		assertThat(lines.get(2)).contains("refererOne (field " + RefererTwo.class.getName());
 		assertThat(lines.get(3)).isEqualTo("      ↓");
-		assertThat(lines.get(4)).contains("refererTwo " + "(field " + BeanOne.class.getName());
+		assertThat(lines.get(4)).contains("refererTwo (field " + BeanOne.class.getName());
 		assertThat(lines.get(5)).isEqualTo("┌─────┐");
 		assertThat(lines.get(6))
-				.startsWith("|  one defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
+			.startsWith("|  one defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
 		assertThat(lines.get(7)).isEqualTo("↑     ↓");
 		assertThat(lines.get(8))
-				.startsWith("|  two defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
+			.startsWith("|  two defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
 		assertThat(lines.get(9)).isEqualTo("↑     ↓");
 		assertThat(lines.get(10))
-				.startsWith("|  three defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
+			.startsWith("|  three defined in " + CycleReferencedViaOtherBeansConfiguration.class.getName());
 		assertThat(lines.get(11)).isEqualTo("└─────┘");
+		assertThat(analysis.getAction()).isNotNull();
 	}
 
 	@Test
-	public void cycleWithAnUnknownStartIsNotAnalyzed() {
+	void testSelfReferenceCycle() throws IOException {
+		FailureAnalysis analysis = performAnalysis(SelfReferenceBeanConfiguration.class);
+		List<String> lines = readDescriptionLines(analysis);
+		assertThat(lines).hasSize(5);
+		assertThat(lines.get(0))
+			.isEqualTo("The dependencies of some of the beans in the application context form a cycle:");
+		assertThat(lines.get(1)).isEmpty();
+		assertThat(lines.get(2)).isEqualTo("┌──->──┐");
+		assertThat(lines.get(3)).startsWith("|  bean defined in " + SelfReferenceBeanConfiguration.class.getName());
+		assertThat(lines.get(4)).isEqualTo("└──<-──┘");
+		assertThat(analysis.getAction()).isNotNull();
+	}
+
+	@Test
+	void cycleWithAnUnknownStartIsNotAnalyzed() {
 		assertThat(this.analyzer.analyze(new BeanCurrentlyInCreationException("test"))).isNull();
+	}
+
+	@Test
+	void cycleWithCircularReferencesAllowed() {
+		FailureAnalysis analysis = performAnalysis(CyclicBeanMethodsConfiguration.class, true);
+		assertThat(analysis.getAction()).contains("Despite circular references being allowed");
+	}
+
+	@Test
+	void cycleWithCircularReferencesProhibited() {
+		FailureAnalysis analysis = performAnalysis(CyclicBeanMethodsConfiguration.class, false);
+		assertThat(analysis.getAction()).contains("As a last resort");
 	}
 
 	private List<String> readDescriptionLines(FailureAnalysis analysis) throws IOException {
 		try (BufferedReader reader = new BufferedReader(new StringReader(analysis.getDescription()))) {
-			return reader.lines().collect(Collectors.toList());
+			return reader.lines().toList();
 		}
 	}
 
 	private FailureAnalysis performAnalysis(Class<?> configuration) {
-		FailureAnalysis analysis = this.analyzer.analyze(createFailure(configuration));
+		return performAnalysis(configuration, true);
+	}
+
+	private FailureAnalysis performAnalysis(Class<?> configuration, boolean allowCircularReferences) {
+		FailureAnalysis analysis = this.analyzer.analyze(createFailure(configuration, allowCircularReferences));
 		assertThat(analysis).isNotNull();
 		return analysis;
 	}
 
-	private Exception createFailure(Class<?> configuration) {
-		try (ConfigurableApplicationContext context = new AnnotationConfigApplicationContext(configuration)) {
+	private Exception createFailure(Class<?> configuration, boolean allowCircularReferences) {
+		try {
+			this.context.register(configuration);
+			AbstractAutowireCapableBeanFactory beanFactory = (AbstractAutowireCapableBeanFactory) this.context
+				.getBeanFactory();
+			beanFactory.setAllowCircularReferences(allowCircularReferences);
+			this.context.refresh();
 			fail("Expected failure did not occur");
 			return null;
 		}
@@ -136,27 +176,27 @@ public class BeanCurrentlyInCreationFailureAnalyzerTests {
 		}
 	}
 
-	@org.springframework.context.annotation.Configuration
+	@org.springframework.context.annotation.Configuration(proxyBeanMethods = false)
 	static class CyclicBeanMethodsConfiguration {
 
 		@Bean
-		public BeanThree three(BeanOne one) {
+		BeanThree three(BeanOne one) {
 			return new BeanThree();
 		}
 
-		@org.springframework.context.annotation.Configuration
+		@org.springframework.context.annotation.Configuration(proxyBeanMethods = false)
 		static class InnerConfiguration {
 
 			@Bean
-			public BeanTwo two(BeanThree three) {
+			BeanTwo two(BeanThree three) {
 				return new BeanTwo();
 			}
 
-			@Configuration
+			@Configuration(proxyBeanMethods = false)
 			static class InnerInnerConfiguration {
 
 				@Bean
-				public BeanOne one(BeanTwo two) {
+				BeanOne one(BeanTwo two) {
 					return new BeanOne();
 				}
 
@@ -166,37 +206,37 @@ public class BeanCurrentlyInCreationFailureAnalyzerTests {
 
 	}
 
-	@Configuration
+	@Configuration(proxyBeanMethods = false)
 	static class CycleReferencedViaOtherBeansConfiguration {
 
 		@Bean
-		public BeanOne one(BeanTwo two) {
+		BeanOne one(BeanTwo two) {
 			return new BeanOne();
 		}
 
 		@Bean
-		public BeanTwo two(BeanThree three) {
+		BeanTwo two(BeanThree three) {
 			return new BeanTwo();
 		}
 
 		@Bean
-		public BeanThree three(BeanOne beanOne) {
+		BeanThree three(BeanOne beanOne) {
 			return new BeanThree();
 		}
 
-		@Configuration
+		@Configuration(proxyBeanMethods = false)
 		static class InnerConfiguration {
 
 			@Bean
-			public RefererTwo refererTwo() {
+			RefererTwo refererTwo() {
 				return new RefererTwo();
 			}
 
-			@Configuration
+			@Configuration(proxyBeanMethods = false)
 			static class InnerInnerConfiguration {
 
 				@Bean
-				public RefererOne refererOne() {
+				RefererOne refererOne() {
 					return new RefererOne();
 				}
 
@@ -206,36 +246,46 @@ public class BeanCurrentlyInCreationFailureAnalyzerTests {
 
 	}
 
-	@org.springframework.context.annotation.Configuration
-	public static class CycleWithAutowiredFields {
+	@org.springframework.context.annotation.Configuration(proxyBeanMethods = false)
+	static class CycleWithAutowiredFields {
 
 		@Bean
-		public BeanOne one(BeanTwo two) {
+		BeanOne one(BeanTwo two) {
 			return new BeanOne();
 		}
 
-		@org.springframework.context.annotation.Configuration
-		public static class BeanTwoConfiguration {
+		@org.springframework.context.annotation.Configuration(proxyBeanMethods = false)
+		static class BeanTwoConfiguration {
 
 			@SuppressWarnings("unused")
 			@Autowired
 			private BeanThree three;
 
 			@Bean
-			public BeanTwo two() {
+			BeanTwo two() {
 				return new BeanTwo();
 			}
 
 		}
 
-		@org.springframework.context.annotation.Configuration
-		public static class BeanThreeConfiguration {
+		@org.springframework.context.annotation.Configuration(proxyBeanMethods = false)
+		static class BeanThreeConfiguration {
 
 			@Bean
-			public BeanThree three(BeanOne one) {
+			BeanThree three(BeanOne one) {
 				return new BeanThree();
 			}
 
+		}
+
+	}
+
+	@Configuration(proxyBeanMethods = false)
+	static class SelfReferenceBeanConfiguration {
+
+		@Bean
+		SelfReferenceBean bean(SelfReferenceBean bean) {
+			return new SelfReferenceBean();
 		}
 
 	}
@@ -263,6 +313,13 @@ public class BeanCurrentlyInCreationFailureAnalyzerTests {
 	}
 
 	static class BeanThree {
+
+	}
+
+	static class SelfReferenceBean {
+
+		@Autowired
+		SelfReferenceBean bean;
 
 	}
 
